--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
                 <meta charset="utf-8">
         </head>
         <body>
-                <p>여기는 github 과제 테스트 페이지 입니다.</p>
+                <p>여기는 ansible-github 과제 테스트 페이지 입니다.</p>
                 <p><a href="../index.html"> 돌아가기  </a></p>
         </body>
 </html>
