--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </head>
         <body>
                 <p>여기는 ansible-github 과제 테스트 페이지 입니다.</p>
-		<p>최종으로 파일 수정하고 제출합니다.</p>
+		<p>오타 수정 후 최종 과제 제출합니다.</p>
                 <p><a href="../index.html"> 돌아가기  </a></p>
         </body>
 </html>
